[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/levels/inward_outward/spawner_system.gd" type="Script" id=1]
[ext_resource path="res://scripts/levels/inward_outward/spawner.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 128, 0, 0, 0, 0, 0, 128, 720 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 720 )
}

[node name="SpawnerSystem" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Spawner1" type="Path2D" parent="."]
curve = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sampler" type="PathFollow2D" parent="Spawner1"]
position = Vector2( 128, 0 )
rotate = false

[node name="Spawner2" type="Path2D" parent="."]
curve = SubResource( 2 )
script = ExtResource( 2 )

[node name="Sampler" type="PathFollow2D" parent="Spawner2"]
position = Vector2( 1152, 0 )
rotate = false

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="Timer" to="." method="spawn_enemy"]
